linphone-3.7.0 -- February 20th, 2014
	Application level improvements:
	* It is now possible to configure multiple proxy accounts with different transports (UDP, TCP, TLS)
	* can work with IPv6 and IPv4 simultaneously
	* User can choose video rendering method on Linux
	* Video HD formats support added, leveraging on multiple cores for encoding if available
	* Keyboard can be used for DTMF input
	* Faster and higly responsive UI thanks to fully asynchronous operation of the liblinphone.
	* Addon of opus codec
	* Possibility to specify a remote provisionning http URI for configuration
	* LDAP search integration for Linux and MacOSX
	* is-composing notification in chat area 

	Liblinphone level improvements thanks to new "belle-sip" SIP stack:
	* multiple SIP transports simultaneously now allowed
	* IP dual stack: can use IPv6 and IPv4 simultaneously
	* fully asynchronous behavior: no more lengthly DNS or connections 
	* +sip.instance parameter (RFC5626)
	* alias parameter (RFC5923)
	* better management of network disconnections
	* SIP/TLS handled through lightweighted polarssl library (instead of openssl)
	* SIP transaction state machines improved (RFC6026)
	* Privacy API (RFC3323, RFC3325)
	* Full support of rich presence in (RFC4480)
	* Better handling of sips scheme in URIs.
	* Messaging: support of is-composing (RFC3994)
	* Call transfer fixes in error cases
	* Add API for managing SIP SUBSCRIBES/NOTIFY/PUBLISH (linphonecore/event.h)
	* bugfixes

	Requires: mediastreamer2 = 2.10.0, ortp = 0.23.0, belle-sip = 1.3.0

linphone-3.6.1 -- June 17, 2013
	* fix memory leak with some video cameras on windows.
	
	Requires: mediastreamer2 = 2.9.1 and ortp = 0.22.0

linphone-3.6.0 -- May 27, 2013
	UI:
	* new friend list and chat messaging UI
	* enhanced call history
	* call and conference audio recording
	* persistent chat history
	* DSCP settings for SIP and RTP
	* display of call statistics (when clicking on the quality indicator bar)
	core: